; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_if_ruby.c_buffer_aset.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_if_ruby.c_buffer_aset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @buffer_aset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @buffer_aset(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32* @get_buf(i32 %9)
  store i32* %10, i32** %8, align 8
  %11 = load i32*, i32** %8, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %20

13:                                               ; preds = %3
  %14 = load i32*, i32** %8, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i64 @NUM2LONG(i32 %15)
  %17 = trunc i64 %16 to i32
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @set_buffer_line(i32* %14, i32 %17, i32 %18)
  store i32 %19, i32* %4, align 4
  br label %22

20:                                               ; preds = %3
  %21 = load i32, i32* %7, align 4
  store i32 %21, i32* %4, align 4
  br label %22

22:                                               ; preds = %20, %13
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i32* @get_buf(i32) #1

declare dso_local i32 @set_buffer_line(i32*, i32, i32) #1

declare dso_local i64 @NUM2LONG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
